Add calculation of each graph gradients - rate of change wrt each variable

--- a/TurnUpVisualization.ipynb
+++ b/TurnUpVisualization.ipynb
@@ -226,18 +226,31 @@
    "source": [
     "def prob_calc(data, variable):\n",
     "    df = pds.crosstab(index = data[variable], columns = data.Status).reset_index()\n",
-    "    # print(df)\n",
+    "    # print(df) Number of show up depending on each value of the variable\n",
     "    df['ProbabilityTurnUp'] = df[1] / (df[0] + df[1])\n",
     "    return df[[variable, 'ProbabilityTurnUp']]\n",
+    "\n",
+    "# Put each gradient in a list\n",
+    "def find_gradient(variable, p):\n",
+    "    xs = p.get_lines()[0].get_xdata()\n",
+    "    dx = xs[0] - xs[len(xs) - 1]\n",
+    "    ys = p.get_lines()[0].get_ydata()\n",
+    "    dy = ys[0] - ys[len(ys) - 1]\n",
+    "    gradient = dy / dx\n",
+    "    gradients.append((abs(gradient), variable))\n",
     "\n",
     "# Linear regression when chaning only the passed variable\n",
     "def plot_wrt_variable(data, variable):\n",
     "    sns.set_style(\"whitegrid\")\n",
     "    newdata = prob_calc(data, variable)\n",
     "    sns.lmplot(data = newdata, x = variable, y = 'ProbabilityTurnUp', fit_reg = True)\n",
+    "    # Find regression line gradient - rate of change of probability wrt variable\n",
+    "    p = sns.regplot(data = newdata, x = variable, y = 'ProbabilityTurnUp')\n",
+    "    find_gradient(variable, p)\n",
     "    from_x = min(list(data[variable]))\n",
     "    to_x = max(list(data[variable]))\n",
     "    sns.plt.xlim(from_x, to_x)\n",
+    "    sns.plt.ylim(0.0, 1.0)\n",
     "    sns.plt.title('Probability of showing up with respect to {}'.format(variable))\n",
     "    return newdata\n",
     "\n",
@@ -329,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
